[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.7.1"
embedded-text = "0.5.0"
ibm437 = "0.2.3"
st7789 = "0.6"
rand = "0.7.3"

embedded-graphics-simulator = "0.3.0"
sdl2 = "0.32.0"